# cuda_testbed_ubuntu

./: .clang-format  .gitignore  CMakeLists.txt  README.md
scripts/: build.py
source/: main.cpp
source/components/: ia_nvml.cpp  ia_nvml.h  ia_nvml.hpp  ia_nvml_context.cpp  ia_nvml_context.h  nvml.cpp  nvml.h
source/tests/: test_main.cpp
